--- a/src/main/webapp/css/Signup.css
+++ b/src/main/webapp/css/Signup.css
@@ -7,11 +7,13 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f2f5;
+    justify-items: center;
+    align-content: center;
+    height: 100vh;
 }
 
 .signup-container {
     width: 400px;
-    margin: 100px auto;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
