--- a/src/main/webapp/css/Notification.css
+++ b/src/main/webapp/css/Notification.css
@@ -3,7 +3,7 @@
     background: #fff;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-    padding: 15px;
+    padding: 10px;
     font-family: Arial, sans-serif;
     z-index: 9999;
     overflow-y: auto;
@@ -33,7 +33,7 @@
 
 .notification-content {
     background: #fafafa;
-    padding: 12px;
+    padding: 12px 4px;
     border-radius: 8px;
     margin-top: 12px;
 }
@@ -52,21 +52,13 @@
     border: 2px solid #ddd;
     margin-right: 12px;
 }
-
-.notification-item svg {
-    width: 28px;
-    height: 28px;
-    fill: #0866ff;
-    margin-left: -18px;
-    margin-top: 5px;
-}
-
 .notification-text {
+    width: 225px;
     margin-left: 60px;
     margin-top: -55px;
     flex-grow: 1;
     font-size: 0.95em;
-    color: #444;
+    /*color: #444;*/
     font-weight: 500;
 }
 
@@ -100,4 +92,34 @@
 
 .cancel-friend-search:hover {
     background: #c82333;
+}
+
+
+.notification-content.read {
+    background-color: white;
+    color: #716f6f;
+}
+
+.notification-content.unread {
+    cursor: pointer;
+    background-color: white;
+
+}
+.notification-content.read:hover {
+    cursor: pointer;
+    background-color: #f0f0f0;
+}
+.notification-content.unread:hover {
+    cursor: pointer;
+    background-color: #f0f0f0;
+}
+
+.notification-content.unread .notification-time {
+    color: #007bff;
+    font-weight: bold;
+}
+.notification-content.read .notification-time {
+    color: #adadad;
+    font-weight: normal;
+
 }
