--- a/src/main/webapp/css/Notification.css
+++ b/src/main/webapp/css/Notification.css
@@ -243,7 +243,8 @@
 }
 .notificationMess-content.unread:hover {
     cursor: pointer;
-    background-color: #f0f0f0;
+    background-color: #e1e1e1;
+
 }
 .notificationMess-time{
     margin-left: 160px;
